--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,9 @@ rust: nightly
 install: cargo install mdbook
 script: cd reference && mdbook build && mdbook test
 deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  local-dir: reference/book
+  provider: script
+  script: curl -LsSf https://git.io/fhJ8n | rustc - && (cd reference/book && ../../rust_out)
+  skip_cleanup: true
   keep-history: false
   on:
     branch: master
