--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: rust
 sudo: false
 rust: nightly
-
+cache: cargo
 install: cargo install mdbook
 script: bash -c "cd reference && mdbook build && mdbook test"
 env:
