Fix cache cargo

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: rust
 sudo: false
 rust: nightly
-cache:
-  directories:
-    - $HOME/.cargo/.crates.toml
-    - $HOME/.cargo/bin/mdbook
+cache: cargo
 install: cargo install mdbook
 script: bash -c "cd reference && mdbook build && mdbook test"
 env:
