reference: add link to github repo

--- a/reference/book.toml
+++ b/reference/book.toml
@@ -3,3 +3,7 @@ authors = ["The Rust Project Developers"]
 multilingual = false
 src = "src"
 title = "Unsafe Code Guidelines Reference"
+
+[output.html]
+git-repository-url = "https://github.com/rust-lang/unsafe-code-guidelines"
+git-repository-icon = "fa-github"
